<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_l_16"
        android:background="@drawable/card_background"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_person"
            android:layout_width="@dimen/img_93"
            android:layout_height="@dimen/img_93"
            android:layout_margin="@dimen/margin_m_12"
            android:scaleType="fitXY"
            android:src="@drawable/my_img"
            app:shapeAppearanceOverlay="@style/imageViewRoundedCorners" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m_12"
                android:fontFamily="@font/dm_sans_bold"
                android:gravity="center_vertical"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large_16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_s_8"
                android:fontFamily="@font/dm_sans_m"
                android:gravity="center_vertical"
                android:text="Engineer"
                android:textColor="@color/color_medium_text_87op"
                android:textSize="@dimen/text_size_med_12sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_s_8"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="@dimen/padding_tiny_4"
                android:drawableTint="@color/location_icon_tint_color"
                android:fontFamily="@font/dm_sans_regular"
                android:gravity="center_vertical"
                android:text="@string/country"
                android:textColor="@color/color_rd_text"
                android:textSize="@dimen/text_size_m_13sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_s_8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_s_8"
                    android:fontFamily="@font/dm_sans_regular"
                    android:gravity="center_vertical"
                    android:text="@string/reviews_count"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_med_12sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_m"
                    android:gravity="center_vertical"
                    android:text="@string/rating"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_med_12sp"
                    android:textStyle="bold"
                    android:drawableEnd="@drawable/ic_star"
                    android:drawableTint="#F9D100"
                    android:drawablePadding="@dimen/padding_tiny_4"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="end"
            >

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="@dimen/text_size_med_12sp"
                android:textStyle="normal"
                android:fontFamily="@font/dm_sans_regular"
                android:background="@drawable/time_bg"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/margin_m_12"
                android:layout_marginEnd="@dimen/margin_s_8"
                android:layout_gravity="end"
                android:paddingVertical="@dimen/padding_tiny_4"
                android:paddingHorizontal="@dimen/padding_s_8"
                />

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:layout_marginTop="@dimen/margin_s_8"
                android:layout_marginEnd="@dimen/margin_s_8"
                android:layout_gravity="end"
                android:fontFamily="@font/dm_sans_m"
                android:gravity="center_vertical"
                android:textColor="@color/color_medium_text_87op"
                android:textSize="@dimen/text_size_med_12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_last_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_time"
                android:layout_marginTop="@dimen/margin_s_8"
                android:layout_marginEnd="@dimen/margin_s_8"
                android:layout_gravity="end"
                android:fontFamily="@font/dm_sans_regular"
                android:gravity="center_vertical"
                android:textColor="@color/color_medium_text_38op"
                android:textSize="@dimen/text_size_med_12sp"
                android:textStyle="normal"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>